# uv-project

./: .gitignore  README.md  SKILLS.md  deepseek_compat.py  deepseek_defaults.py  pyproject.toml  server.py
agents/: get_anime_info.py  get_quote_source.py  get_time.py  get_weather.py  main_agent.py  tool_registry.py  trace_logger.py
agents/prompts/: main_agent_few_shot.txt
data/: agent_traces.sqlite3-shm  agent_traces.sqlite3-wal
main_client/: ai_server_client.py  ai_vision_client.py
